--- a/backend/.env.example
+++ b/backend/.env.example
@@ -8,5 +8,8 @@ MONGO_URI=mongodb://localhost:27017/nsdatalab
 # Gemini API Configuration
 GEMINI_API_KEY=your_gemini_api_key_here
 
-# Environment
-NODE_ENV=development
+# Kaggle API Configuration
+KAGGLE_API_TOKEN=your_kaggle_api_token_here
+KAGGLE_USERNAME=your_kaggle_username
+KAGGLE_KEY=your_kaggle_api_key
+KAGGLE_CACHE_DIR=./kaggle-cache
