--- a/backend/package.json
+++ b/backend/package.json
@@ -27,7 +27,9 @@
     "helmet": "^8.0.0",
     "mongoose": "^8.9.3",
     "multer": "^1.4.5-lts.1",
-    "csv-parser": "^3.0.0"
+    "csv-parser": "^3.0.0",
+    "adm-zip": "^0.5.16",
+    "node-cache": "^5.1.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
