--- a/backend/package.json
+++ b/backend/package.json
@@ -29,7 +29,8 @@
     "multer": "^1.4.5-lts.1",
     "csv-parser": "^3.0.0",
     "adm-zip": "^0.5.16",
-    "node-cache": "^5.1.2"
+    "node-cache": "^5.1.2",
+    "axios": "^1.6.7"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
